tests: add missing e2e tests for new stories (#244)